# fief

./: .all-contributorsrc  .env.dist  .gitignore  .gitmodules  CNAME  Dockerfile  LICENSE  LICENSE.md  README.md  SECURITY.md  babel.cfg  docker-compose.dev.yml  docker-compose.yml  justfile  mkdocs.yml  package-lock.json  package.json  pyproject.toml  rollup.config.js
backend/: .dockerignore  .env.dist  Dockerfile  alembic.ini  babel.cfg  cli.py  conftest.py  justfile  package-lock.json  package.json  pyproject.toml  requirements.dev.txt  requirements.txt  setup.cfg  tailwind.config.js
backend/alembic/: env.py  script.py.mako
backend/alembic/account_versions/: 0863948660e4_initial_migration.py  120e58fb0bfa_add_tenant_and_user_tables.py  3ac554a12a09_add_authorizationcode_table.py  5dbb6789db19_add_initial_migration.py  6b10f4d6ecee_add_grant_table.py  7e272ec80b8f_add_tenant_client_id_and_client_secret.py  8ce5f352381f_add_initial_migration.py  978e795ec35b_add_sessiontoken_table.py  9a7335491816_initial_migration.py  ba379c352a71_add_initial_migration.py  c790f44ecd59_initial_migration.py  d0e8fa016926_initial_migration.py  e759937faf36_add_initial_migration.py  f11aa991937e_initial_migration.py
backend/alembic/global_versions/: 02665ba60a85_add_sign_jwk_column_on_account.py  0620e346d22b_initial_migration.py  206f2ddff4e1_remove_jwk_keys_from_account.py  30dd92f38907_add_initial_migration.py  99a6e5d2c342_add_sessiontoken_table.py  b6065150e7da_add_created_at_updated_at_columns.py  d869327be6c4_initial_migration.py  dd7a54cfd1f0_add_domain_column_to_account.py  e9764e7e88ca_rename_sessiontoken_adminsessiontoken.py  f279c1997666_make_account_database_url_optional.py
backend/fief/: alembic.ini  app.py  cli.py  cors.py  csrf.py  db.py  errors.py  exceptions.py  fastapi_users.py  forms.py  locale.py  logger.py  logging.py  paths.py  scheduler.py  settings.py  worker.py
backend/fief/alembic/: env.py
backend/fief/apps/: __init__.py
backend/fief/auth/: jwk.py  jwt.py
backend/fief/crypto/: access_token.py  encryption.py  id_token.py  jwk.py  password.py  token.py
backend/fief/db/: __init__.py  account.py  engine.py  main.py  types.py  workspace.py
backend/fief/dependencies/: account.py  account_creation.py  account_db.py  account_managers.py  account_user.py  admin_api_key.py  admin_authentication.py  admin_session.py  auth.py  authentication_flow.py  authorization_code_flow.py  client.py  csrf.py  current_account.py  current_workspace.py  db.py  email_template.py  fief.py  form.py  global_managers.py  locale.py  logger.py  main_managers.py  main_repositories.py  managers.py  oauth.py  oauth_provider.py  pagination.py  permission.py  register.py  reset.py  role.py  session_token.py  tenant.py  token.py  user_field.py  users.py  workspace.py  workspace_creation.py  workspace_managers.py  (+1 more)
backend/fief/emails/: base.html  forgot_password.html  welcome.html
backend/fief/managers/: __init__.py  account.py  account_user.py  admin_api_key.py  admin_session_token.py  authorization_code.py  base.py  client.py  grant.py  login_session.py  permission.py  refresh_token.py  session_token.py  tenant.py  user.py  user_field.py  workspace.py  workspace_user.py
backend/fief/middlewares/: csrf.py
backend/fief/models/: __init__.py  access_token.py  account.py  account_user.py  admin_api_key.py  admin_session_token.py  audit_log.py  authorization_code.py  base.py  client.py  email_template.py  generics.py  grant.py  login_session.py  oauth_account.py  oauth_provider.py  oauth_session.py  permission.py  refresh_token.py  registration_session.py  role.py  session_token.py  tenant.py  user.py  user_field.py  user_field_value.py  user_permission.py  user_role.py  workspace.py  workspace_user.py
backend/fief/repositories/: __init__.py  admin_api_key.py  admin_session_token.py  authorization_code.py  base.py  client.py  email_template.py  grant.py  login_session.py  oauth_account.py  oauth_provider.py  oauth_session.py  permission.py  refresh_token.py  registration_session.py  role.py  session_token.py  tenant.py  user.py  user_field.py  user_permission.py  user_role.py  workspace.py  workspace_user.py
backend/fief/routers/: auth.py  register.py
backend/fief/schemas/: __init__.py  access_token.py  account.py  admin_api_key.py  auth.py  client.py  email_template.py  generics.py  oauth.py  oauth_account.py  oauth_provider.py  permission.py  register.py  reset.py  role.py  tenant.py  user.py  user_field.py  user_permission.py  user_role.py  well_known.py  workspace.py
backend/fief/services/: account_creation.py  account_db.py  authentication_flow.py  authorization_code_flow.py  email_template.py  main_workspace.py  oauth_provider.py  registration_flow.py  response_type.py  (+3 more)
backend/templates/: auth_layout.html  authorize.html  consent.html  login.html  register.html
backend/tests/: conftest.py  data.py  helpers.py  test_apps_account_auth.py  test_apps_account_register.py  test_apps_account_userinfo.py  test_apps_account_well_known.py  test_apps_admin_accounts.py  test_apps_admin_api_keys.py  test_apps_admin_auth.py  test_apps_admin_clients.py  test_apps_admin_dashboard_api_keys.py  test_apps_admin_dashboard_auth.py  test_apps_admin_dashboard_clients.py  test_apps_admin_dashboard_email_templates.py  test_apps_admin_dashboard_oauth_providers.py  test_apps_admin_dashboard_permissions.py  test_apps_admin_dashboard_roles.py  test_apps_admin_dashboard_users.py  test_apps_admin_dashboard_workspaces.py  test_apps_admin_email_templates.py  test_apps_admin_encryption_keys.py  test_apps_admin_oauth_providers.py  test_apps_admin_permissions.py  test_apps_admin_roles.py  test_apps_admin_tenants.py  test_apps_admin_user_fields.py  test_apps_admin_users.py  test_apps_admin_well_known.py  test_apps_admin_workspaces.py  test_apps_auth_auth.py  test_apps_auth_forms_register.py  test_apps_auth_oauth.py  test_apps_auth_register.py  test_apps_auth_reset.py  test_apps_auth_token.py  test_apps_auth_user.py  test_apps_auth_userinfo.py  test_apps_auth_well_known.py  test_apps_supervisor_accounts.py  (+34 more)
(+1021 files in other folders)
