[tool.mypy]
plugins = ["sqlalchemy.ext.mypy.plugin", "pydantic.mypy"]
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "furl.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "jwcrypto.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "uvicorn"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "uvicorn.logging.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "postmarker.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sendgrid.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "dramatiq.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "asyncpg.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pymysql.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pycountry.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sentry_dramatiq.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "wtforms.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "apscheduler.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sqlalchemy_utils.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "posthog.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "python_http_client.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "bs4.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "attr.*"  # Imported by rich in .hatch/fief-server/lib/python3.11/site-packages/rich/pretty.py:31
ignore_missing_imports = true

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
extend-select = ["I", "TRY", "UP"]
ignore = ["E501"]
per-file-ignores = {"conftest.py" = ["E731"], "tests/*" = ["TRY"], "fief/repositories/*" = ["E711", "E712"], "fief/alembic/*" = ["F401"]}

[tool.coverage.run]
concurrency = ["thread", "gevent"]
omit = ["fief/alembic/*"]

[tool.pytest.ini_options]
addopts = "-n auto --cov fief/ --cov-report=term-missing"
markers = ["test_data", "access_token", "authenticated_admin", "htmx"]
asyncio_mode = "strict"

[tool.hatch]

[tool.hatch.build]
include = [
  "/fief/**/*.py",
  "/fief/py.typed",
  "/fief/alembic.ini",
  "/fief/locale",
  "/fief/static",
  "/fief/templates",
  "/fief/services/email_template/templates",
]
artifacts = [
  "/fief/static/**/*.js",
  "/fief/static/**/*.css",
  "/fief/locale/**/*.mo",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
source = "regex_commit"
commit_extra_args = ["-e"]
path = "fief/__init__.py"

[tool.hatch.envs.default]
installer = "uv"
python = "3.12"
dependencies = [
  "asgi-lifespan",
  "beautifulsoup4",
  "coverage[toml]",
  "gevent",
  "httpx",
  "libcst",
  "mypy",
  "pytest",
  "pytest-cov",
  "pytest-asyncio>=0.21,<0.22",
  "pytest-mock",
  "pytest-xdist",
  "respx",
  "ruff",
  "types-python-slugify",
  "types-pytz",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args}"
test-cov-xml = "pytest --cov fief/ --cov-report=xml --exitfirst"

lint = [
  "ruff format .",
  "ruff check --fix .",
  "mypy fief/",
]
lint-check = [
  "ruff format --check .",
  "ruff check .",
  "mypy fief/",
]

"translations.add" = [
  "mkdir -p fief/locale/{args}/LC_MESSAGES",
  "touch fief/locale/{args}/LC_MESSAGES/messages.po",
  "hatch run translations.update",
]
"translations.update" = [
  "pybabel extract --mapping babel.cfg --output-file=fief/locale/messages.pot .",
  "pybabel update --domain=messages --input-file=fief/locale/messages.pot --output-dir=fief/locale",
]
"translations.compile" = [
  "pybabel compile --domain=messages --directory=fief/locale",
]

"static.build" = "npm run build"

"migrations.create" = [
  "docker compose up -d db",
  "env GENERATE_MIGRATION=1 alembic -c fief/alembic.ini revision --autogenerate -m {args}",
]
"migrations.migrate" = [
  "docker compose up -d db",
  "env GENERATE_MIGRATION=1 alembic -c fief/alembic.ini upgrade head",
]

"telemetry.set-posthog-key" = [
  "sed -i.bak 's/__POSTHOG_API_KEY__/{args}/' fief/services/posthog.py",
  "rm fief/services/posthog.py.bak"
]

"dev.env.start" = "docker compose up -d"
"dev.env.stop" = "docker compose stop"
"dev.server.start" = [
  "hatch run translations.compile",
  "hatch run static.build",
  "uvicorn --host 0.0.0.0 --port 8000 fief.app:app"
]
"dev.server.watch" = "watchfiles --ignore-paths fief/static,fief/locale 'hatch run dev.server.start' fief js styles"
"dev.worker.start" = "dramatiq fief.worker -p 1 -t 1 -f fief.scheduler:schedule"
"dev.worker.watch" = "watchfiles --ignore-paths fief/static,fief/locale 'hatch run dev.worker.start' fief"

[build-system]
requires = ["hatchling", "hatch-regex-commit"]
build-backend = "hatchling.build"

[project]
name = "fief-server"
authors = [
  { name = "François Voron", email = "contact@fief.dev" }
]
description = "Users and authentication management SaaS"
readme = "README.md"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
]
dynamic = ["version"]
requires-python = ">=3.12"
dependencies = [
    "aiomysql ==0.2.0",
    "aiosqlite ==0.20.0",
    "alembic ==1.14.0",
    "apscheduler ==3.10.4",
    "argon2_cffi ==23.1.0",
    "asgi-babel==0.10.0",
    "asyncpg ==0.30.0",
    "dramatiq[redis] ==1.17.1",
    "email_validator ==2.2.0",
    "fastapi ==0.115.4",
    "fief-client ==0.20.0",
    "furl ==2.1.3",
    "httpx-oauth ==0.15.1",
    "itsdangerous ==2.2.0",
    "Jinja2 ==3.1.4",
    "jwcrypto ==1.5.6",
    "loguru ==0.7.2",
    "phonenumbers >=8.12.48,<8.14",
    "posthog >=3.0.1,<4",
    "postmarker ==1.0",
    "pydantic ==2.9.2",
    "python-multipart ==0.0.17",
    "pydantic-settings ==2.6.1",
    "pwdlib[argon2,bcrypt] ==0.2.1",
    "sendgrid ==6.11.0",
    "psycopg2 ==2.9.10",
    "pycountry >=23,<25",
    "python-slugify ==8.0.4",
    "pytz ==2024.2",
    "rich ==13.9.4",
    "sentry_dramatiq ==0.3.3",
    "sentry-sdk ==2.18.0",
    "sqlalchemy[mypy] ==2.0.36",
    "sqlalchemy-utils ==0.41.2",
    "typer ==0.16.0",
    "uvicorn[standard]==0.32.0",
    "WTForms==3.2.1",
    "zxcvbn-rs-py==0.1.1",
]

[project.scripts]
fief = "fief.cli.__main__:app"

[project.urls]
Documentation = "https://docs.fief.dev"
Source = "https://github.com/fief-dev/fief"
