[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
extend-select = ["I", "TRY", "UP", "T20"]

[tool.mypy]
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
strict_equality = true
disallow_untyped_defs = true


[tool.pytest.ini_options]
addopts = "--cov=fief/ --cov-report=term-missing"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if typing.TYPE_CHECKING:",
] # See: https://github.com/nedbat/coveragepy/issues/831

[tool.hatch]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
source = "regex_commit"
commit_extra_args = ["-e"]
path = "fief/__init__.py"

[tool.hatch.envs.default]
installer = "uv"
python = "3.10"
dependencies = [
    "mypy",
    "ruff",
    "pytest",
    "pytest-cov",
    "trio",
    "mkdocs-material",
    "mkdocstrings[python]",
    "pwdlib[argon2,bcrypt]",
    "sqlalchemy[asyncio]",
    "aiosqlite",
    "asgiref",
    "starlette",
]

[tool.hatch.envs.default.scripts]
test = "pytest"
test-cov-xml = "pytest --cov-report=xml"
lint = ["ruff format .", "ruff check --fix .", "mypy fief/ tests/"]
lint-check = ["ruff format --check .", "ruff check .", "mypy fief/"]
docs-serve = "mkdocs serve"
docs-build = "mkdocs build"

[build-system]
requires = ["hatchling", "hatch-regex-commit"]
build-backend = "hatchling.build"

[project]
name = "fief"
authors = [{ name = "fief", email = "contact@fief.dev" }]
description = "Authentication toolkit for Python"
readme = "README.md"
dynamic = ["version"]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
]
requires-python = ">=3.10"
dependencies = ["anyio", "dishka", "pwdlib[argon2]"]

[project.optional-dependencies]
sqlalchemy = ["sqlalchemy[asyncio]"]
asgi = ["asgiref"]

[project.urls]
Documentation = "https://www.fief.dev"
Source = "https://github.com/fief-dev/fief"
