[tool.mypy]
plugins = "sqlalchemy.ext.mypy.plugin"

[[tool.mypy.overrides]]
module = "furl.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "jwcrypto.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "uvicorn"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "uvicorn.logging.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "babel.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "postmarker.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "dramatiq.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "passlib.*"
ignore_missing_imports = true

[tool.isort]
profile = "black"

[tool.coverage.run]
concurrency = ["thread", "gevent"]
omit = ["fief/alembic/*"]

[tool.pytest.ini_options]
markers = ["test_data", "workspace_host", "access_token", "authenticated_admin"]
asyncio_mode = "auto"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "fief"

[project]
name = "fief-server"
authors = [
  { name = "François Voron", email = "contact@fief.dev" }
]
description = "Users and authentication management SaaS"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only",
]
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = [
    "aiomysql ==0.0.22",
    "aiosqlite ==0.17.0",
    "alembic ==1.7.7",
    "argon2_cffi ==21.3.0",
    "asyncpg ==0.25.0",
    "Babel ==2.9.1",
    "dramatiq[redis] ==1.12.3",
    "fastapi ==0.75.0",
    "fastapi-users[sqlalchemy2] ==9.3.0",
    "fief-client ==0.5.0",
    "furl ==2.1.3",
    "greenlet==1.1.2",
    "gunicorn ==20.1.0",
    "Jinja2 ==3.0.3",
    "jwcrypto ==1.0",
    "postmarker ==1.0",
    "psycopg2 ==2.9.3",
    "pydantic[dotenv] ==1.9.0",
    "python-slugify ==6.1.1",
    "sentry-sdk ==1.5.7",
    "sqlalchemy[mypy] ==1.4.32",
    "typer ==0.4.0",
    "uvicorn[standard]==0.17.6",
]

[project.optional-dependencies]
dev = [
  "asgi-lifespan",
  "black",
  "bumpversion",
  "coverage[toml]",
  "flit",
  "gevent",
  "httpx",
  "isort",
  "mypy",
  "pytest",
  "pytest-cov",
  "pytest-asyncio",
  "pytest-mock",
  "sqlalchemy-utils",
  "tryceratops",
  "types-python-slugify",
]

[project.scripts]
fief = "fief.cli:app"

[project.urls]
Documentation = "https://docs.fief.dev"

[tool.flit.sdist]
include = ["fief/static", "fief/locale"]
exclude = ["tests"]
